[package]
name = "vulkan-water-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
instant = "0.1"
winit = "0.28"

vulkano = { version = "0.34", features = ["macros", "shaderc"] }
vulkano-shaders = { version = "0.34", features = ["shaderc"] }
vulkano-win = "0.34"

glam = "0.24"

[profile.release]
debug = true
